# nemotron-sft-finetune

./: .gitignore  README.md  pyproject.toml
configs/: grpo.yaml  grpo_kaggle.yaml  sft.yaml  sft_kaggle.yaml
data/: teacher_train.stats.json
notebooks/: nemotron-eda-puzzle-types.ipynb  nemotron-sft-lora-submission.ipynb
scripts/: generate_teacher_data.py  package_submission.py  prepare_data.py  run_pipeline.sh  train.py  train_grpo.py
src/nemotron/: __init__.py  config.py  data_utils.py  rewards.py  solvers.py
